# dataScienceJourney

./: README.md
EDA v1.0/: eda.py
EDA v1.1/: EDA Sunum.pptx  categoricalVariables.py  havaDurumu.py  machineLearning.py  trafficAccidentCorrelationAnalysis.py
FastAPI/: main.py  readme.txt  requirements.txt
FastAPI/app/: models.py  ocr.py  routes.py
FastAPI/app/templates/: results.html  upload.html
crewaiflowandcrews/: README.md  article_samples.txt  pyproject.toml  requirements.txt
crewaiflowandcrews/src/: AI_in_Cybersecurity.md  AI_in_Cybersecurity_4o_mini.md  AI_in_Education.md
crewaiflowandcrews/src/crewaiflowandcrews/: api.py  main.py  types.py
crewaiflowandcrews/src/crewaiflowandcrews/crews/poem_crew/outline_article_crew/: outline_crew.py
crewaiflowandcrews/src/crewaiflowandcrews/crews/poem_crew/outline_article_crew/config/: agents.yaml  tasks.yaml
crewaiflowandcrews/src/crewaiflowandcrews/crews/poem_crew/write_article_chapter_crew/: write_article_chapter_crew.py
crewaiflowandcrews/src/crewaiflowandcrews/crews/poem_crew/write_article_chapter_crew/config/: agents.yaml  tasks.yaml
