[project]
name = "crewaiflowandcrews"
version = "0.1.0"
description = "crewaiflowandcrews using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crewai[tools]>=0.76.9,<1.0.0",
]

[project.scripts]
kickoff = "crewaiflowandcrews.main:kickoff"
plot = "crewaiflowandcrews.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewaiflowandcrews"]
